[package]
name = "nc-to-pq"
version = "0.1.0"
edition = "2024"
authors = ["axect <axect@outlook.kr>"]
repository = "https://github.com/Axect/nc-to-pq"
description = "A CLI tool to convert 1D variable NetCDF4 files to Apache Parquet format."
readme = "README.md"
license = "MIT"
keywords = ["netcdf", "parquet", "cli", "conversion"]
categories = ["command-line-utilities", "science", "data-processing"]

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
peroxide = { version = "0.39.5", features = ["nc", "parquet"] }
